# ELOAnalyis

./: .gitignore  README.md  pyproject.toml
notebooks/: 1_static_skill_scenario.ipynb
src/: elo.py  metrics.py  scenarios.py  simulation.py  visualization.py
